Closed
Bug 184207
Opened 22 years ago
Closed 22 years ago
name/value pairs not being submitted on submit()
Categories
(Core :: DOM: Core & HTML, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.3beta
People
(Reporter: john, Assigned: john)
References
Details
(Keywords: topembed, Whiteboard: [FIX])
Attachments
(2 files, 1 obsolete file)
|
144 bytes,
text/html
|
Details | |
|
3.23 KB,
patch
|
alexsavulov
:
review+
kinmoz
:
superreview+
|
Details | Diff | Splinter Review |
When you have <input type=submit name=x value=y onclick='this.form.submit()'>
the x=y should submit (the web developer who wrote the html code in question
should be shot as well). This is a regression of bug 138957.
| Assignee | ||
Comment 1•22 years ago
|
||
The problem is that mPendingSubmission is getting set to false in
nsHTMLFormElement::HandleDOMEvent() during the capture stage of the onclick
handler. This patch fixes the problem by not setting mPendingSubmission =
FALSE unless it is the submit event. It also shuffles the part that resets
mPendingSubmission = null to the submit() method and adds an assertion, so that
we can catch cases where submissions fall through the cracks a little easier.
| Assignee | ||
Updated•22 years ago
|
Attachment #108655 -
Flags: review?(alexsavulov)
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [FIX]
| Assignee | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Priority: -- → P3
Target Milestone: --- → mozilla1.3beta
| Assignee | ||
Comment 3•22 years ago
|
||
Merge to trunk, and don't flush on reset.
Attachment #108655 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Attachment #109247 -
Flags: review?(alexsavulov)
| Assignee | ||
Updated•22 years ago
|
Attachment #108655 -
Flags: review?(alexsavulov)
Comment 4•22 years ago
|
||
Comment on attachment 109247 [details] [diff] [review]
Patch v1.1
ok this cancels the patch i prepared for the regression bug 184931. good to go
dude!
Attachment #109247 -
Flags: review?(alexsavulov) → review+
Comment 5•22 years ago
|
||
this one is really important be cause of the regression bug 184931
| Assignee | ||
Updated•22 years ago
|
Attachment #109247 -
Flags: superreview?(jst)
Comment 6•22 years ago
|
||
Bug 184931 is an ALL/ALL bug, should not be wontfixed, since this bug is not
ALL/ALL and is either a dupe of or will create a worksforme in the other.
Attachment #109247 -
Flags: superreview?(jst) → superreview+
| Assignee | ||
Comment 8•22 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•6 years ago
|
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•